fix feature and documentation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   },
   "private": true,
   "projectConfig": {
-    "apiKey": "514458ad2f8f5c5364e8b8e6fa9eb85e"
+    "apiKey": "<put the api key from imdb here>"
   }
 }
